--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^33.0.0",
+    "expo": "^36.0.0",
     "react": "16.8.3",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.3.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0"
   },
