--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^36.0.0",
-    "react": "16.8.3",
-    "react-dom": "^16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
-    "react-native-gesture-handler": "^1.3.0",
-    "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.0"
+    "expo": "^38.0.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-web": "~0.11.7",
+    "react-navigation": "^3.11.0",
+    "react-native-screens": "~2.9.0"
   },
   "devDependencies": {
-    "babel-preset-expo": "^5.1.1"
+    "babel-preset-expo": "^8.2.3"
   },
   "private": true
 }
